--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-loader": "^7.1.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "extract-css-block-webpack-plugin": "^1.3.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.4",
