--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/shaunc44/todo_react/issues"
   },
-  "homepage": "https://github.com/shaunc44/todo_react#readme",
+  "homepage": "https://shaunc44.github.io/shaunc44/todo_react",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
@@ -28,6 +29,7 @@
     "css-loader": "^0.28.4",
     "extract-css-block-webpack-plugin": "^1.3.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.4",
